--- a/FE/src/components/RegisterForm.css
+++ b/FE/src/components/RegisterForm.css
@@ -14,7 +14,7 @@
 .register-form h2 {
     text-align: center;
     margin-bottom: 20px;
-    color: #000000; /* Màu chữ xanh dương cho tiêu đề */
+    color: #000000; 
 }
 
 .register-form .form-group {
@@ -24,7 +24,7 @@
 .register-form label {
     display: block;
     margin-bottom: 5px;
-    color: #000000; /* Màu chữ xanh dương cho nhãn */
+    color: #000000; 
 }
 
 .register-form input {
@@ -33,8 +33,8 @@
     margin: 5px 0;
     border: 1px solid #000000;
     border-radius: 4px;
-    background-color: rgba(255, 255, 255, 0.8); /* Làm nền input có độ trong suốt */
-    color: #007bff; /* Màu chữ xanh dương cho input */
+    background-color: rgba(255, 255, 255, 0.8);
+    color: #007bff; 
 }
 
 .register-form button {
@@ -56,5 +56,11 @@
     text-align: center;
     margin-top: 15px;
     font-size: 16px;
-    color: #000000; /* Màu chữ xanh dương cho thông báo */
+    color: #000000; 
 }
+/* src/components/RegisterForm.css */
+.error-message {
+    color: rgb(0, 0, 0);
+    font-size: 12px;
+    margin-top: 5px;
+  }
